Fixed bug that shuffles k-fold validation data.

--- a/final_project/preprocess_data.ipynb
+++ b/final_project/preprocess_data.ipynb
@@ -48,10 +48,6 @@
     "\n",
     "    # Extract data into different classes\n",
     "    full_df = pd.read_csv(full_raw_path, index_col=0)\n",
-    "    \n",
-    "    # Check if folder exists\n",
-    "    if not os.path.exists(prefix_path):\n",
-    "        os.mkdir(prefix_path)\n",
     "\n",
     "    cls_1_raw = full_df[full_df['y'] == 1]\n",
     "    cls_2_raw = full_df[full_df['y'] == 2]\n",
@@ -474,7 +470,7 @@
    "source": [
     "from sklearn.utils import shuffle\n",
     "\n",
-    "# Create encoded data if not loaded earlier\n",
+    "# Create encoded data if not loaded earlier, then create cross validation sets\n",
     "if 'train_test_data_enc' not in locals() or 'validation_data_enc' not in locals():\n",
     "\n",
     "    # Encode training and testing data\n",
@@ -494,100 +490,99 @@
     "    train_test_data_enc.to_csv(train_test_enc_path, index=False)\n",
     "    validation_data_enc.to_csv(validation_enc_path, index=False)\n",
     "\n",
-    "# Shuffle and split data for 4-fold cross validation\n",
-    "train_data_dict = {\"k1\": [], \"k2\": [], \"k3\": [], \"k4\": []}\n",
-    "test_data_dict = {\"k1\": [], \"k2\": [], \"k3\": [], \"k4\": []}\n",
+    "    # Shuffle and split data for 4-fold cross validation\n",
+    "    train_data_dict = {\"k1\": [], \"k2\": [], \"k3\": [], \"k4\": []}\n",
+    "    test_data_dict = {\"k1\": [], \"k2\": [], \"k3\": [], \"k4\": []}\n",
     "\n",
-    "# Find the length of data for each class\n",
-    "len_cls = len(train_test_data_enc)/5.0\n",
-    "if len_cls.is_integer(): len_cls = int(len_cls)\n",
-    "else: raise Exception(\"Class length is not an integer!\")\n",
+    "    # Find the length of data for each class\n",
+    "    len_cls = len(train_test_data_enc)/5.0\n",
+    "    if len_cls.is_integer(): len_cls = int(len_cls)\n",
+    "    else: raise Exception(\"Class length is not an integer!\")\n",
     "\n",
-    "# Iterate through each class\n",
-    "for i in range(5):\n",
+    "    # Iterate through each class\n",
+    "    for i in range(5):\n",
     "\n",
-    "    # Extract class data\n",
-    "    cls_data = train_test_data_enc.iloc[i*len_cls : (i+1)*len_cls, :]\n",
-    "    cls_data = shuffle(cls_data)\n",
-    "    cls_data.reset_index(inplace=True, drop=True)\n",
+    "        # Extract class data\n",
+    "        cls_data = train_test_data_enc.iloc[i*len_cls : (i+1)*len_cls, :].copy()\n",
+    "        cls_data.reset_index(inplace=True, drop=True)\n",
     "\n",
-    "    k_fold_data_size = len_cls/4\n",
-    "    if k_fold_data_size.is_integer(): k_fold_data_size = int(k_fold_data_size)\n",
-    "    else: raise Exception(\"K-fold data size is not an integer!\")\n",
-    "    \n",
-    "    # Define indices for 4-fold cross validation data partitions\n",
-    "    ind_1 = 0\n",
-    "    ind_2 = k_fold_data_size + ind_1\n",
-    "    ind_3 = k_fold_data_size + ind_2\n",
-    "    ind_4 = k_fold_data_size + ind_3\n",
+    "        k_fold_data_size = len_cls/4\n",
+    "        if k_fold_data_size.is_integer(): k_fold_data_size = int(k_fold_data_size)\n",
+    "        else: raise Exception(\"K-fold data size is not an integer!\")\n",
+    "        \n",
+    "        # Define indices for 4-fold cross validation data partitions\n",
+    "        ind_1 = 0\n",
+    "        ind_2 = k_fold_data_size + ind_1\n",
+    "        ind_3 = k_fold_data_size + ind_2\n",
+    "        ind_4 = k_fold_data_size + ind_3\n",
     "\n",
-    "    # Split data into partitions\n",
-    "    partition_1 = cls_data.iloc[ind_1:ind_2, :]\n",
-    "    partition_2 = cls_data.iloc[ind_2:ind_3, :]\n",
-    "    partition_3 = cls_data.iloc[ind_3:ind_4, :]\n",
-    "    partition_4 = cls_data.iloc[ind_4:, :]\n",
+    "        # Split data into partitions\n",
+    "        partition_1 = cls_data.iloc[ind_1:ind_2, :]\n",
+    "        partition_2 = cls_data.iloc[ind_2:ind_3, :]\n",
+    "        partition_3 = cls_data.iloc[ind_3:ind_4, :]\n",
+    "        partition_4 = cls_data.iloc[ind_4:, :]\n",
     "\n",
-    "    # Assign training data into 4-fold cross validation sets\n",
-    "    train_1 = pd.concat([partition_1.copy(), partition_2.copy(), partition_3.copy()])\n",
-    "    train_2 = pd.concat([partition_2.copy(), partition_3.copy(), partition_4.copy()])\n",
-    "    train_3 = pd.concat([partition_3.copy(), partition_4.copy(), partition_1.copy()])\n",
-    "    train_4 = pd.concat([partition_4.copy(), partition_1.copy(), partition_2.copy()])\n",
+    "        # Assign training data into 4-fold cross validation sets\n",
+    "        train_1 = pd.concat([partition_1.copy(), partition_2.copy(), partition_3.copy()])\n",
+    "        train_2 = pd.concat([partition_2.copy(), partition_3.copy(), partition_4.copy()])\n",
+    "        train_3 = pd.concat([partition_3.copy(), partition_4.copy(), partition_1.copy()])\n",
+    "        train_4 = pd.concat([partition_4.copy(), partition_1.copy(), partition_2.copy()])\n",
     "\n",
-    "    # Assign testing data into 4-fold cross validation sets\n",
-    "    test_1 = partition_4.copy()\n",
-    "    test_2 = partition_1.copy()\n",
-    "    test_3 = partition_2.copy()\n",
-    "    test_4 = partition_3.copy()\n",
+    "        # Assign testing data into 4-fold cross validation sets\n",
+    "        test_1 = partition_4.copy()\n",
+    "        test_2 = partition_1.copy()\n",
+    "        test_3 = partition_2.copy()\n",
+    "        test_4 = partition_3.copy()\n",
     "\n",
-    "    # Store data\n",
-    "    train_data_dict[\"k1\"].append(train_1)\n",
-    "    train_data_dict[\"k2\"].append(train_2)\n",
-    "    train_data_dict[\"k3\"].append(train_3)\n",
-    "    train_data_dict[\"k4\"].append(train_4)\n",
+    "        # Store data\n",
+    "        train_data_dict[\"k1\"].append(train_1)\n",
+    "        train_data_dict[\"k2\"].append(train_2)\n",
+    "        train_data_dict[\"k3\"].append(train_3)\n",
+    "        train_data_dict[\"k4\"].append(train_4)\n",
     "\n",
-    "    test_data_dict[\"k1\"].append(test_1)\n",
-    "    test_data_dict[\"k2\"].append(test_2)\n",
-    "    test_data_dict[\"k3\"].append(test_3)\n",
-    "    test_data_dict[\"k4\"].append(test_4)\n",
+    "        test_data_dict[\"k1\"].append(test_1)\n",
+    "        test_data_dict[\"k2\"].append(test_2)\n",
+    "        test_data_dict[\"k3\"].append(test_3)\n",
+    "        test_data_dict[\"k4\"].append(test_4)\n",
     "\n",
-    "# Combine and shuffle data frames for each dictionary key (i.e., k-value)\n",
-    "four_fold_train_data_1 = shuffle( pd.concat( train_data_dict[\"k1\"] ) )\n",
-    "four_fold_train_data_2 = shuffle( pd.concat( train_data_dict[\"k2\"] ) )\n",
-    "four_fold_train_data_3 = shuffle( pd.concat( train_data_dict[\"k3\"] ) )\n",
-    "four_fold_train_data_4 = shuffle( pd.concat( train_data_dict[\"k4\"] ) )\n",
+    "    # Combine and shuffle data frames for each dictionary key (i.e., k-value)\n",
+    "    four_fold_train_data_1 = shuffle( pd.concat( train_data_dict[\"k1\"] ) )\n",
+    "    four_fold_train_data_2 = shuffle( pd.concat( train_data_dict[\"k2\"] ) )\n",
+    "    four_fold_train_data_3 = shuffle( pd.concat( train_data_dict[\"k3\"] ) )\n",
+    "    four_fold_train_data_4 = shuffle( pd.concat( train_data_dict[\"k4\"] ) )\n",
     "\n",
-    "four_fold_test_data_1 = shuffle( pd.concat( test_data_dict[\"k1\"] ) )\n",
-    "four_fold_test_data_2 = shuffle( pd.concat( test_data_dict[\"k2\"] ) )\n",
-    "four_fold_test_data_3 = shuffle( pd.concat( test_data_dict[\"k3\"] ) )\n",
-    "four_fold_test_data_4 = shuffle( pd.concat( test_data_dict[\"k4\"] ) )\n",
+    "    four_fold_test_data_1 = shuffle( pd.concat( test_data_dict[\"k1\"] ) )\n",
+    "    four_fold_test_data_2 = shuffle( pd.concat( test_data_dict[\"k2\"] ) )\n",
+    "    four_fold_test_data_3 = shuffle( pd.concat( test_data_dict[\"k3\"] ) )\n",
+    "    four_fold_test_data_4 = shuffle( pd.concat( test_data_dict[\"k4\"] ) )\n",
     "\n",
-    "four_fold_train_data_1.reset_index(inplace=True, drop=True)\n",
-    "four_fold_train_data_2.reset_index(inplace=True, drop=True)\n",
-    "four_fold_train_data_3.reset_index(inplace=True, drop=True)\n",
-    "four_fold_train_data_4.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_train_data_1.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_train_data_2.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_train_data_3.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_train_data_4.reset_index(inplace=True, drop=True)\n",
     "\n",
-    "four_fold_test_data_1.reset_index(inplace=True, drop=True)\n",
-    "four_fold_test_data_2.reset_index(inplace=True, drop=True)\n",
-    "four_fold_test_data_3.reset_index(inplace=True, drop=True)\n",
-    "four_fold_test_data_4.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_test_data_1.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_test_data_2.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_test_data_3.reset_index(inplace=True, drop=True)\n",
+    "    four_fold_test_data_4.reset_index(inplace=True, drop=True)\n",
     "\n",
-    "# Save data to file\n",
-    "four_fold_path_suffix_1 = \"_4-fold-1.csv\"\n",
-    "four_fold_path_suffix_2 = \"_4-fold-2.csv\"\n",
-    "four_fold_path_suffix_3 = \"_4-fold-3.csv\"\n",
-    "four_fold_path_suffix_4 = \"_4-fold-4.csv\"\n",
+    "    # Save data to file\n",
+    "    four_fold_path_suffix_1 = \"_4-fold-1.csv\"\n",
+    "    four_fold_path_suffix_2 = \"_4-fold-2.csv\"\n",
+    "    four_fold_path_suffix_3 = \"_4-fold-3.csv\"\n",
+    "    four_fold_path_suffix_4 = \"_4-fold-4.csv\"\n",
     "\n",
-    "len_prefix = len(prefix_path)\n",
+    "    len_prefix = len(prefix_path)\n",
     "\n",
-    "four_fold_train_data_1.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_1, index=False)\n",
-    "four_fold_train_data_2.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_2, index=False)\n",
-    "four_fold_train_data_3.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_3, index=False)\n",
-    "four_fold_train_data_4.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_4, index=False)\n",
+    "    four_fold_train_data_1.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_1, index=False)\n",
+    "    four_fold_train_data_2.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_2, index=False)\n",
+    "    four_fold_train_data_3.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_3, index=False)\n",
+    "    four_fold_train_data_4.to_csv(train_test_path[:len_prefix+11] + \"_train\" + four_fold_path_suffix_4, index=False)\n",
     "\n",
-    "four_fold_test_data_1.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_1, index=False)\n",
-    "four_fold_test_data_2.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_2, index=False)\n",
-    "four_fold_test_data_3.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_3, index=False)\n",
-    "four_fold_test_data_4.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_4, index=False)"
+    "    four_fold_test_data_1.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_1, index=False)\n",
+    "    four_fold_test_data_2.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_2, index=False)\n",
+    "    four_fold_test_data_3.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_3, index=False)\n",
+    "    four_fold_test_data_4.to_csv(train_test_path[:len_prefix+11] + \"_test\" + four_fold_path_suffix_4, index=False)"
    ]
   }
  ],
