Added details to saved filename in run_validation.py

--- a/final_project/preprocess_data.ipynb
+++ b/final_project/preprocess_data.ipynb
@@ -101,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load vault data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
